Table users {
  id integer [primary key]
  name text [not null]
  email text [not null, unique]
  password text [not null, unique]
}

Table muscle_group {
  id integer [primary key]
  name text [not null]
}

Table exercise {
  id integer [primary key]
  muscle_group_id integer [not null, ref: > muscle_group.id]
  name text [not null]
  gif text
}

Table workout {
  id integer [primary key]
  user_id integer [not null, ref: > users.id]
  name text [not null]
  description text
}

Table workout_exercise {
  id integer [primary key]
  exercise_id integer [not null, ref: > exercise.id]
  workout_id integer [not null, ref: > workout.id]
  sets integer [not null]
  reps integer [not null]
  weight real
}

Table exercise_log {
  id integer [primary key]
  user_id integer [not null, ref: > users.id]
  exercise_id integer [not null, ref: > exercise.id]
  date timestamp [not null]
  sets integer [not null]
  reps integer [not null]
  weight real
}